--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -10,4 +10,4 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
-      - run: npm run e2e:chrome
+        run: npm run e2e:chrome
