--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -6,8 +6,8 @@ jobs:
     steps:
       - name: my-step
         run: echo "Hello World!"
-         - name: use node.js
+      - name: use node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
-        run: npm run e2e:chrome
+          node-version: 18.x
+        run: 'npm run e2e:chrome'
