--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,17 +1,20 @@
 name: hello-world
-on: 
+on:
   push:
 jobs:
   my-job:
     runs-on: ubuntu-latest
     steps:
-      - name: my-step
-        run: echo "Hello World!"
-      
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
+
+      - name: Install dependencies
+        run: npm install
       
       - name: Run e2e tests on Chrome
         run: npm run e2e:chrome
