--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -15,6 +15,7 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+        run: npm install cypress --save-dev
       
       - name: Run e2e tests on Chrome
         run: npm run e2e:chrome
