--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -15,7 +15,9 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+
+      - name: Install Cypress
         run: npm install cypress --save-dev
-      
+
       - name: Run e2e tests on Chrome
         run: npm run e2e:chrome
