--- a/.github/workflows/cypress-demo-pipeline.yml
+++ b/.github/workflows/cypress-demo-pipeline.yml
@@ -1,40 +1,34 @@
 name: hello-world
-on:
-  push:
+'on':
+  push: null
 jobs:
-  run-cypress-job:
+  install-cypress-job:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Cypress install
         uses: cypress-io/github-action@v6
         with:
-          # Disable running of tests within install job
           runTests: false
           build: npm run build
-
       - name: Save build folder
         uses: actions/upload-artifact@v4
         with:
           name: build
           if-no-files-found: error
           path: build
-
   cypress-run:
     runs-on: ubuntu-22.04
-    needs: install
+    needs: install-cypress-job
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Download the build folder
         uses: actions/download-artifact@v4
         with:
           name: build
           path: build
-
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
