--- a/.github/workflows/cypress-demo-pipeline.yml
+++ b/.github/workflows/cypress-demo-pipeline.yml
@@ -11,7 +11,7 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           runTests: false
-          build: npm --prefix ../ run build
+          build: npm --prefix ../cypress-demo run build
       - name: Save build folder
         uses: actions/upload-artifact@v4
         with:
