--- a/.github/workflows/cypress-demo-pipeline.yml
+++ b/.github/workflows/cypress-demo-pipeline.yml
@@ -1,4 +1,4 @@
-name: hello-world
+name: run-tests
 'on':
   push: null
 jobs:
@@ -11,7 +11,7 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           runTests: false
-          build: npm --prefix . run build
+          build: npm run build
       - name: Save build folder
         uses: actions/upload-artifact@v4
         with:
@@ -19,7 +19,7 @@ jobs:
           if-no-files-found: error
           path: build
   cypress-run:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     needs: install-cypress-job
     steps:
       - name: Checkout
