--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -9,7 +9,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Install dependencies
         run: npm install
-        working-directory: ../  # Running npm install one directory up
+        working-directory: ./cypress-demo  # Running npm install one directory up
 
       - name: Cypress install
         uses: cypress-io/github-action@v6
