--- a/.github/workflows/cypress-demo.yml
+++ b/.github/workflows/cypress-demo.yml
@@ -33,3 +33,9 @@ jobs:
 
       - name: Run Cypress Tests
         run: npm run e2e:chrome
+      - task: PublishBuildArtifacts@1
+      - name: 'Publish Cypress Screenshot Files'
+        condition: failed()
+        inputs:
+        PathtoPublish: 'cypress/screenshots'
+         ArtifactName: 'screenshots'  
