--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "e2e:chrome": "cypress run --browser chrome"
+    "generate-report": "npm run cleanup-reports && marge cypress/reports/mochawesome.json --reportDir cypress/reports",
+    "cleanup-reports": "rm -f cypress/reports/mochawesome.html && rm -f cypress/reports/mochawesome.json",
+    "e2e:chrome": "cypress run --browser chrome",
+    "e2e:electron": "cypress run --browser electron"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +15,7 @@
     "@types/mocha": "^10.0.8",
     "@types/node": "^22.7.4",
     "cypress": "^13.15.0",
+    "cypress-mochawesome-reporter": "^3.8.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
