--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "cypress-mochawesome-reporter": "^3.8.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "http-server": "^14.1.1"
   }
 }
