--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/mocha": "^10.0.8",
+    "@types/mochawesome": "^6.2.4",
     "@types/node": "^22.7.4",
     "cypress": "^13.15.0",
     "cypress-mochawesome-reporter": "^3.8.2",
