--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "@types/node": "^22.7.4",
     "cypress": "^13.15.0",
     "cypress-mochawesome-reporter": "^3.8.2",
+    "http-server": "^14.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
-  },
-  "dependencies": {
-    "http-server": "^14.1.1"
   }
 }
