--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/js-yaml": "^4.0.9",
     "@types/mocha": "^10.0.8",
     "@types/mochawesome": "^6.2.4",
-    "@types/node": "^22.7.4",
+    "@types/node": "^22.7.5",
     "cypress": "^13.15.0",
     "cypress-mochawesome-reporter": "^3.8.2",
     "http-server": "^14.1.1",
