--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "http-server": "^14.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "ts-yaml": "^1.0.0"
   }
 }
